assets/bs-override.scss
---
---

@import "font_sizes";
@import "fonts";
@import "emails";
@import "colors";
@import "grid";
@import "typography";
@import "elements";
@import "utilities";
@import "box";
@import "tables";
@import "quote";
@import "aside";
@import "topics";
@import "home";
@import "posts_section";
@import "post";
@import "footer";
@import "other_posts";
@import "details";
@import "toc";
@import "prism_extra";




.aside-padding{
  padding-top: 0.5rem;
  padding-bottom: 1rem;

  @media (min-width: 992px)  {
    padding-top: 4rem;
  }
}

.main-padding{
  padding-top: 3rem;

  @media (min-width: 992px)  {
    padding-top: 4rem;
  }
}

.reading-width{
  max-width: 800px;
}






.article-body a{
  text-decoration: underline;
  transition: color 0.2s ease-in-out;
}

@media (min-width: 1200px) {
  .article-body table {
    max-width: 100%;
  }
  .highlight, .post-excerpt, .home, .topic-page{
    img {
      max-width: 100%;
      height: auto;
    }
  }

  .MathJax {
    max-width: 800px !important;
  }
}

.source-link{
  text-align:center;

  a{
    font-style: italic;
    font-size: 80%;
  }
}

.post-meta {
  font-size: 0.9rem;
  letter-spacing: 0.03em;
}


/**
 * Math highlighting styles
 */
.MathJax{
  color: #d2196e;
}

.highlight {
  pre {
    padding: 1rem;
    border-radius: 5px;
  }
}


 /**
  * tags
  */
.badge{
  &.bg-yellow{
    background: $color-yellow;
    border: 1px solid $color-yellow-border;
    color: $color-badge-text;
  }
  &.bg-yellow-washed-out{
    background: #fff7b4;
    border: 1px solid #f0e791;
    color: #6c6319;
  }
  display: inline-block;
  padding: 0.25em 0.55em;
  font-size: 0.85rem;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 4px;
  margin-right: 0.4rem;
  letter-spacing: 0.03em;
}

.flex-row {
  display: flex;
  flex-direction: row;
  align-items: baseline; /* aligns title text baseline with date */
  flex-wrap: wrap; /* allows wrapping on small screens */
  gap: 0.35rem 0.45rem;
}

.colorful{
  height: 5px;
  width: 100%;
  background-image: linear-gradient(90deg, $color-red-darker, $color-yellow);
  margin-bottom: $standard-margin;
}

